Class names added to form rows

--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
 <body>
   <h2>Sign Up</h2>
   <form action="" method="GET">
-    <div>
+    <div class="full-name">
       <label for="first-name"></label>
       <input type="text" id="first-name" name="first-name" placeholder="FIRST NAME" required>
       <label for="last-name"></label>
       <input type="text" id="last-name" name="last-name" placeholder="LAST NAME">
     </div>
-    <div>
+    <div class="contact-info">
       <label for="email"></label>
       <input type="email" id="email" name="email" placeholder="E-MAIL" required>
       <label for="telephone"></label>
       <input type="tel" id="telephone" name="telephone" placeholder="PHONE #">
     </div>
-    <div>
+    <div class="passcode">
       <label for="password"></label>
       <input type="password" id="password" name="password" placeholder="PASSWORD" required>
       <label for="confirm-password"></label>
       <input type="password" id="confirm-password" name="confirm-password" placeholder="CONFIRM PASSWORD" required>
     </div>
-    <input type="submit" value="Create Account">
+    <div class="commit">
+      <input type="submit" value="Create Account">
+    </div>
   </form>
 </body>
-
 </html>
