--- a/index.html
+++ b/index.html
@@ -3,54 +3,56 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Sign Up</title>
+    <title>Sign Up Form</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script defer src="script.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Sofia"
+    />
   </head>
 
   <body>
     <div class="container">
-      <div class="left-logo">
-        <figure class="salmon">
+      <header>
+        <div class="logo">
           <img src="images/salmon.jpg" alt="salmon" />
           <div class="logo-text">
             <div>COOK</div>
-            <div class="small-logo-text">...LESS</div>
+            <div class="small-logo-text">~ LESS</div>
           </div>
-          <div class="image-credit">
-            <div class="right-credit">
-              Photo by
-              <a
-                href="https://unsplash.com/@redzzz97?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-                >Mattia Occhi</a
-              >
-
-              on
-              <a
-                href="https://unsplash.com/photos/OwR3d_kvzJk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-                >Unsplash</a
-              >
-            </div>
+          <div class="credit">
+            Photo by
+            <a
+              href="https://unsplash.com/@redzzz97?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+              >Mattia Occhi</a
+            >
+            on
+            <a
+              href="https://unsplash.com/photos/OwR3d_kvzJk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+              >Unsplash</a
+            >
           </div>
-        </figure>
-      </div>
+        </div>
+      </header>
 
-      <div class="right-form">
+      <div class="form">
         <form action="" method="GET">
           <div class="my-form">
             <h2 class="title">Sign Up</h2>
-            <div class="form-boxes">
-              <div>
-                <label for="first-name"></label>
-                <input
-                  type="text"
-                  id="first-name"
-                  name="first-name"
-                  placeholder="FIRST NAME"
-                  required
-                />
+            <div class="form-row">
+              <div class="form-box">
+                  <label for="first-name"></label>
+                  <input
+                    type="text"
+                    id="first-name"
+                    name="first-name"
+                    placeholder="FIRST NAME"
+                    required
+                  />
               </div>
 
+              <div class="form-box"></div>
               <label for="last-name"></label>
               <input
                 type="text"
@@ -59,7 +61,12 @@
                 placeholder="LAST NAME"
                 required
               />
+              </div>
+          </div>
 
+
+          <div class="form-row">
+            <div class="form-box">
               <label for="email"></label>
               <input
                 type="email"
@@ -68,7 +75,9 @@
                 placeholder="E-MAIL"
                 required
               />
+            </div>
 
+            <div class="form-box">
               <label for="telephone"></label>
               <input
                 type="tel"
@@ -76,7 +85,12 @@
                 name="telephone"
                 placeholder="PHONE #"
               />
+            </div>
+          </div>
 
+
+          <div class="form-row">
+            <div class="form-box">
               <label for="password"></label>
               <input
                 type="password"
@@ -85,7 +99,9 @@
                 placeholder="PASSWORD"
                 required
               />
+            </div>
 
+            <div class="form-box"></div>
               <label for="confirm-password"></label>
               <input
                 type="password"
@@ -95,12 +111,9 @@
                 required
               />
             </div>
-            <div class="submit">
-              <button type="submit" value="Create Account">
-                CREATE ACCOUNT
-              </button>
-            </div>
           </div>
+
+          <button>CREATE ACCOUNT</button>
         </form>
       </div>
     </div>
