--- a/index.html
+++ b/index.html
@@ -14,45 +14,42 @@
 
   <body>
     <div class="container">
-      <header>
-        <div class="logo">
-          <img src="images/salmon.jpg" alt="salmon" />
-          <div class="logo-text">
-            <div>COOK</div>
-            <div class="small-logo-text">~ LESS</div>
-          </div>
-          <div class="credit">
-            Photo by
-            <a
-              href="https://unsplash.com/@redzzz97?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-              >Mattia Occhi</a
-            >
-            on
-            <a
-              href="https://unsplash.com/photos/OwR3d_kvzJk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-              >Unsplash</a
-            >
-          </div>
+      <div class="logo">
+        <img src="images/salmon.jpg" alt="salmon" />
+        <div class="logo-text">
+          <div>COOK</div>
+          <div class="small-logo-text">~ LESS</div>
         </div>
-      </header>
+        <div class="credit">
+          Photo by
+          <a
+            href="https://unsplash.com/@redzzz97?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+            >Mattia Occhi</a
+          >
+          on
+          <a
+            href="https://unsplash.com/photos/OwR3d_kvzJk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+            >Unsplash</a
+          >
+        </div>
+      </div>
 
-      <div class="form">
+      <div class="signup-form">
         <form action="" method="GET">
-          <div class="my-form">
-            <h2 class="title">Sign Up</h2>
-            <div class="form-row">
-              <div class="form-box">
-                  <label for="first-name"></label>
-                  <input
-                    type="text"
-                    id="first-name"
-                    name="first-name"
-                    placeholder="FIRST NAME"
-                    required
-                  />
-              </div>
+          <div class="form-title">Sign Up</div>
+          <div class="form-row">
+            <div class="form-box">
+              <label for="first-name"></label>
+              <input
+                type="text"
+                id="first-name"
+                name="first-name"
+                placeholder="FIRST NAME"
+                required
+              />
+            </div>
 
-              <div class="form-box"></div>
+            <div class="form-box">
               <label for="last-name"></label>
               <input
                 type="text"
@@ -61,9 +58,9 @@
                 placeholder="LAST NAME"
                 required
               />
-              </div>
+            </div>
           </div>
-
+          <!-- End of ROW 1 including First Name & Last Name -->
 
           <div class="form-row">
             <div class="form-box">
@@ -87,7 +84,7 @@
               />
             </div>
           </div>
-
+          <!-- End of ROW 2 including Email & Phone # -->
 
           <div class="form-row">
             <div class="form-box">
@@ -101,7 +98,7 @@
               />
             </div>
 
-            <div class="form-box"></div>
+            <div class="form-box">
               <label for="confirm-password"></label>
               <input
                 type="password"
@@ -112,10 +109,15 @@
               />
             </div>
           </div>
-
-          <button>CREATE ACCOUNT</button>
+          <!-- End of ROW 3 including Password & Confirm Password -->
+          <div class="form-row">
+            <button>CREATE ACCOUNT</button>
+          </div>
+          <!-- End of ROW 4 including the submit button for CSS purposes-->
         </form>
       </div>
+      <!-- End of class="signup-form" -->
     </div>
+    <!-- End of class="container" -->
   </body>
 </html>
