--- a/index.html
+++ b/index.html
@@ -13,111 +13,114 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="logo">
-        <img src="images/salmon.jpg" alt="salmon" />
-        <div class="logo-text">
-          <div>COOK</div>
-          <div class="small-logo-text">~ LESS</div>
+    <div class="main">
+      <div class="container">
+        <div class="logo">
+          <img src="images/salmon.jpg" alt="salmon" />
+          <div class="logo-text">
+            <div>COOK</div>
+            <div class="small-logo-text">~ LESS</div>
+          </div>
+          <div class="credit">
+            Photo by
+            <a
+              href="https://unsplash.com/@redzzz97?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+              >Mattia Occhi</a
+            >
+            on
+            <a
+              href="https://unsplash.com/photos/OwR3d_kvzJk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+              >Unsplash</a
+            >
+          </div>
         </div>
-        <div class="credit">
-          Photo by
-          <a
-            href="https://unsplash.com/@redzzz97?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-            >Mattia Occhi</a
-          >
-          on
-          <a
-            href="https://unsplash.com/photos/OwR3d_kvzJk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-            >Unsplash</a
-          >
+
+        <div class="signup-form">
+          <form action="" method="GET">
+            <div class="form-title">Sign Up</div>
+            <div class="form-row">
+              <div class="form-box">
+                <label for="first-name"></label>
+                <input
+                  type="text"
+                  id="first-name"
+                  name="first-name"
+                  placeholder="FIRST NAME"
+                  required
+                />
+              </div>
+
+              <div class="form-box">
+                <label for="last-name"></label>
+                <input
+                  type="text"
+                  id="last-name"
+                  name="last-name"
+                  placeholder="LAST NAME"
+                  required
+                />
+              </div>
+            </div>
+            <!-- End of ROW 1 including First Name & Last Name -->
+
+            <div class="form-row">
+              <div class="form-box">
+                <label for="email"></label>
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  placeholder="E-MAIL"
+                  required
+                />
+              </div>
+
+              <div class="form-box">
+                <label for="telephone"></label>
+                <input
+                  type="tel"
+                  id="telephone"
+                  name="telephone"
+                  placeholder="PHONE #"
+                />
+              </div>
+            </div>
+            <!-- End of ROW 2 including Email & Phone # -->
+
+            <div class="form-row">
+              <div class="form-box">
+                <label for="password"></label>
+                <input
+                  type="password"
+                  id="password"
+                  name="password"
+                  placeholder="PASSWORD"
+                  required
+                />
+              </div>
+
+              <div class="form-box">
+                <label for="confirm-password"></label>
+                <input
+                  type="password"
+                  id="confirm-password"
+                  name="confirm-password"
+                  placeholder="CONFIRM PASSWORD"
+                  required
+                />
+              </div>
+            </div>
+            <!-- End of ROW 3 including Password & Confirm Password -->
+            <div class="form-box">
+              <button>CREATE ACCOUNT</button>
+            </div>
+            <!-- End of ROW 4 including the submit button for CSS purposes-->
+          </form>
         </div>
+        <!-- End of class="signup-form" -->
       </div>
-
-      <div class="signup-form">
-        <form action="" method="GET">
-          <div class="form-title">Sign Up</div>
-          <div class="form-row">
-            <div class="form-box">
-              <label for="first-name"></label>
-              <input
-                type="text"
-                id="first-name"
-                name="first-name"
-                placeholder="FIRST NAME"
-                required
-              />
-            </div>
-
-            <div class="form-box">
-              <label for="last-name"></label>
-              <input
-                type="text"
-                id="last-name"
-                name="last-name"
-                placeholder="LAST NAME"
-                required
-              />
-            </div>
-          </div>
-          <!-- End of ROW 1 including First Name & Last Name -->
-
-          <div class="form-row">
-            <div class="form-box">
-              <label for="email"></label>
-              <input
-                type="email"
-                id="email"
-                name="email"
-                placeholder="E-MAIL"
-                required
-              />
-            </div>
-
-            <div class="form-box">
-              <label for="telephone"></label>
-              <input
-                type="tel"
-                id="telephone"
-                name="telephone"
-                placeholder="PHONE #"
-              />
-            </div>
-          </div>
-          <!-- End of ROW 2 including Email & Phone # -->
-
-          <div class="form-row">
-            <div class="form-box">
-              <label for="password"></label>
-              <input
-                type="password"
-                id="password"
-                name="password"
-                placeholder="PASSWORD"
-                required
-              />
-            </div>
-
-            <div class="form-box">
-              <label for="confirm-password"></label>
-              <input
-                type="password"
-                id="confirm-password"
-                name="confirm-password"
-                placeholder="CONFIRM PASSWORD"
-                required
-              />
-            </div>
-          </div>
-          <!-- End of ROW 3 including Password & Confirm Password -->
-          <div class="form-row">
-            <button>CREATE ACCOUNT</button>
-          </div>
-          <!-- End of ROW 4 including the submit button for CSS purposes-->
-        </form>
-      </div>
-      <!-- End of class="signup-form" -->
+      <!-- End of class="container" -->
     </div>
-    <!-- End of class="container" -->
+    <!-- End of class="main" -->
   </body>
 </html>
