Added 'Already have an account' capability

--- a/index.html
+++ b/index.html
@@ -112,9 +112,11 @@
             </div>
             <!-- End of ROW 3 including Password & Confirm Password -->
             <div class="form-box">
-              <button>CREATE ACCOUNT</button>
+              <button>Create Account</button>
             </div>
-            <!-- End of ROW 4 including the submit button for CSS purposes-->
+            <div class="login-text">
+                  Already have an account? <a href="#">Login</a>
+            </div>
           </form>
         </div>
         <!-- End of class="signup-form" -->
