Replaced 'credit' & 'longin' with 'tiny-text'

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div>COOK</div>
             <div class="small-logo-text">~ LESS</div>
           </div>
-          <div class="credit">
+          <div class="tiny-text">
             Photo by
             <a
               href="https://unsplash.com/@redzzz97?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
@@ -114,7 +114,7 @@
             <div class="form-box">
               <button>Create Account</button>
             </div>
-            <div class="login-text">
+            <div class="tiny-text">
                   Already have an account? <a href="#">Login</a>
             </div>
           </form>
