--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="signup-form">
-          <form action="" method="GET">
+          <form action="" method="GET" onSubmit = "return checkPassword(this)">
             <div class="form-title">Sign Up</div>
             <div class="form-row">
               <div class="form-box">
@@ -46,6 +46,7 @@
                   id="first-name"
                   name="first-name"
                   placeholder="FIRST NAME"
+                  autocomplete="given-name"
                   required
                 />
               </div>
@@ -57,6 +58,7 @@
                   id="last-name"
                   name="last-name"
                   placeholder="LAST NAME"
+                  autocomplete="family-name"
                   required
                 />
               </div>
@@ -71,6 +73,8 @@
                   id="email"
                   name="email"
                   placeholder="E-MAIL"
+                  autocomplete="email"
+                  title="Please enter a valid email address"
                   required
                 />
               </div>
@@ -81,7 +85,11 @@
                   type="tel"
                   id="telephone"
                   name="telephone"
-                  placeholder="PHONE #"
+                  placeholder="PHONE xxx-xxx-xxxx"
+                  autocomplete="tel"
+                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                  title="Please enter a valid US telephone number"
+                  required
                 />
               </div>
             </div>
@@ -89,23 +97,27 @@
 
             <div class="form-row">
               <div class="form-box">
-                <label for="password"></label>
+                <label for="password1"></label>
                 <input
                   type="password"
-                  id="password"
-                  name="password"
+                  id="password1"
+                  name="password1"
                   placeholder="PASSWORD"
+                  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                  title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                   required
                 />
               </div>
 
               <div class="form-box">
-                <label for="confirm-password"></label>
+                <label for="password2"></label>
                 <input
                   type="password"
-                  id="confirm-password"
-                  name="confirm-password"
+                  id="password2"
+                  name="password2"
                   placeholder="CONFIRM PASSWORD"
+                  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                  title="Passwords don't match"
                   required
                 />
               </div>
